docs: README 一半是开发史 —— 拆成「用的人看 README，改的人看 docs/」
用户的原话:「readme 应该更多的给出使用的手册,和产品的形态,就像现在有截图一样。
现在很多都是开发的背景」。核过行数,确实:1045 行里开发向内容占一半以上
(演进历程 293 行 + 分期功能清单 77 行 + 项目结构/技术栈/测试策略 108 行),
而产品形态只有 46 行。

## 拆法

| 去处 | 装什么 |
|---|---|
| README(1045 → 429 行) | 这是什么 / 5 分钟上手 / 配模型 / 界面导览 / 能做什么 / 常用命令速查 / 常见问题 |
| docs/cli-manual.md(新 412 行) | **终端全部命令** —— 此前根本没有这份文档 |
| docs/windows-quickstart.md(新 438 行) | 首次上手 + **cmd/PowerShell 双写** + 注意事项 |
| docs/development.md(新 339 行) | 构建 / 测试 / 项目结构 / 技术栈 / 发版 |
| docs/evolution.md(新 388 行) | 25 期开发史 + 分期功能清单 |

判断放哪的标准写进了 AGENTS.md:**第一次来的人需要就进 README,只有改代码的人需要就进 docs/**。

## 终端手册是新写的,清单从源码挖

`README` 原来那节「命令」只有 56 行且不完整。这份按 `CliCommandParser` 的**真实 dispatch**
写全:8 节,含界面每一块是什么、快捷键、三种输入(自然语言/斜杠/@引用)、
全部命令按用途分 13 组、子命令、环境变量、排障对照。

顺带发现并已修(commit 2a519d5):有 8 个命令**敲得动但 Tab 补不出来**,
其中 `/memory pending` 那一族是自动记忆提取的**唯一入口** —— 补全里查不到、
README 里也没写,等于那个特性没有可发现的入口。

## Windows:cmd 与 PowerShell 都写清

新的快速上手里每个步骤都给两种写法,并单列一张「真正会绊倒人」的对照表
(环境变量取值/设置、`&&` 在 PowerShell 5.1 不支持、`Test-Path` vs `dir`…)。

详版 `windows-usage.md` 只在**真有差异的 4 处**补 cmd 写法 ——
扫过全部 38 个 powershell 代码块,其中 31 个两边写法完全相同,
逐个加 cmd 是噪音。差异点判据:`$env:` / `Remove-Item` / `Test-Path` / `&&` 这些。

## 截图:补上终端的两张

此前 `img/wraith-cli-demo.png` 是 **PaiCLI 时代**的图(字标还是 PaiCLI、
版本写「简单的 Java Agent CLI v1.0.0」),等于没有可用的终端截图。
现在有开屏动画(GIF 0.8MB)与一轮完整对话(思考面板 + 工具块 + diff + 状态栏)。

演示环境一并进仓库(`scripts/screenshots/`):本机**假 LLM 端点** + 隔离的 HOME +
中性演示项目。所以截图**不花 API 额度、不碰真实 ~/.wraith/config.json、
读不到仓库根的 .env**,状态栏里的路径是中性的 `~/acme-service` ——
与桌面端那几张图同一个标准,而且可复现。
两张图的标题栏都处理过:用户名 `/Users/<name>` 不进图。

坑记两笔:① `"…:$PORT，HOME=…"` 里全角逗号紧跟 `$PORT`,bash 把多字节当成变量名的一部分
(报 `PORT?: unbound variable`),要写 `${PORT}`;② 就绪检查不能用 `curl -m 3` 打 SSE 流式接口 ——
必然超时返回 28,在端点其实好着的时候误报失败。

Java 2340 / 桌面 1774 / tsc 0。全文档内部链接与锚点已校验(0 坏链、0 坏锚点)。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0186i8XTzXVmK2TuYfAXXJAQ